--- a/index.html
+++ b/index.html
@@ -3,8 +3,120 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dmitriy Kondratev</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <header class="header">
+        <div class="container">
+            <nav class="navigation">
+                <ul class="menu">
+                    <li>
+                        <a href="">About</a>
+                    </li>
+                    <li>
+                        <a href="">Contacts</a>
+                    </li>
+                    <li>
+                        <a href="">Skills</a>
+                    </li>
+                    <li>
+                        <a href="">Education</a>
+                    </li>
+                    <li>
+                        <a href="">Projects</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section class="info">
+            <div class="container">
+                <div class="info__block">
+                    <div class="circle__image">
+                        <img src="/rsschool-cv/img/main.jpg" alt="Photo">
+                    </div>
+                    <div class="info">
+                        <h1 class="main__title">Hi, I'm Dima </h1>
+                        <h2 class="main__subtitle">I am a front end developer from st. petersburg.
+                            I want to try myself in this specialty and realize myself in it.</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="contacts">
+            <div class="container">
+                <div class="contacts_info">
+                    <h1 class="con">Contacts</h1>
+                    <h2>telegram:@cgtda</h2>
+                    <h2>github:@cgtda</h2>
+                </div>
+            </div>
+        </section>
+
+        <section class="skills">
+            <div class="container">
+                <div class="skils_info">
+                    <h1 class="con">Skills</h1>
+                    <h2>HTML</h2>
+                    <h2>CSS</h2>
+                </div>
+            </div>
+        </section>
+
+        <section class="code">
+            <div class="container">
+                <div class="code_info">
+                    <h1 class="code__tit">Code example</h1>
+                    <p><code>
+                        function checkParent (src, dest) {<Br>
+                         while (src != null) {<Br>
+                           if (src.tagName == dest) return src<Br>
+                            src = src.parentElement<Br>
+                         }<Br>
+                         return null<Br>
+                        }</code></p>
+                </div>
+            </div>
+        </section>
+        <section class="projects">
+            <div class="container">
+                <div class="project_info">
+                    <h1 class="projects_title">projects</h1>
+                    <p class="projects_title">you see my first project</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="education">
+            <div class="container">
+                <div class="education_info">
+                    <h1 class="projects_title">education</h1>
+                    <p class="projects_title">English:A1</p>
+                </div>
+            </div>
+        </section>
+    </main>
+<footer class="footer">
+    <div class="container">
+        <nav class="navigation__footer">
+            <ul class="menu">
+                <li>
+                    <a href="https://rs.school/"><img src="../rsschool-cv/img/logo-rsschool3.png" alt="rsschool"></a>
+                </li>
+                <li>
+                    <a href="https://github.com/cgtda/rsschool-cv"><img src="../rsschool-cv/img/free-png.ru-688.png" alt="github"></a>
+                </li>
+                <li>
+                    <h1>2023</h1>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</footer>
 </body>
 </html>
